src/BlazorERP/wwwroot/custom.css
.property {
    display: flex;
    gap: 1em;
    align-items: center;
    background-color: #fff;
    border-radius: 5px;
    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
    padding: 1rem;
    width: 100%;
}

    .property .property-icon {
        font-size: 24px;
        color: #007bff;
    }

    .property .property-title {
        font-weight: bold;
        color: #333;
    }

    .property .property-content {
        flex-grow: 1;
        color: #666;
    }


.d-flex {
    display: flex !important;
}

.list {
    display: flex;
    padding: 1em;
    width: 100%;
    justify-content: space-between;
    align-items: center;
    background: var(--fill-color);
    color: var(--neutral-foreground-rest);
    border: calc(var(--stroke-width) * 1px) solid var(--neutral-stroke-layer-rest);
    border-radius: calc(var(--layer-corner-radius) * 1px);
    box-shadow: var(--elevation-shadow-card-rest);
}

.list-details {
    display: flex;
    flex-wrap: wrap;
    gap: 2rem; /* This adds space between the items */
}

.list-item {
    display: flex;
    flex-direction: column; 
    align-items: flex-start; 
    gap: 6px;
}


/* Hidden */

@media (max-width: 599.98px) {
    [hidden-when~="xs"] {
        display: none;
    }
}

@media (min-width: 600px) and (max-width: 959.98px) {
    [hidden-when~="sm"] {
        display: none;
    }
}

@media (min-width: 960px) and (max-width: 1279.98px) {
    [hidden-when~="md"] {
        display: none;
    }
}

@media (min-width: 1280px) and (max-width: 1919.98px) {
    [hidden-when~="lg"] {
        display: none;
    }
}

@media (min-width: 1920px) and (max-width: 2559.98px) {
    [hidden-when~="xl"] {
        display: none;
    }
}

@media (min-width: 2560px) {
    [hidden-when~="xxl"] {
        display: none;
    }
}


fluent-text-field, fluent-number-field, fluent-select{
    width: 100%;
}

.fluent-select {
    background: padding-box linear-gradient(var(--neutral-fill-rest),var(--neutral-fill-rest)),border-box var(--neutral-stroke-control-rest);
    border: calc(var(--stroke-width) * 1px) solid transparent;
    border-radius: calc(var(--control-corner-radius) * 1px);
    height: calc((var(--base-height-multiplier) + var(--density)) * var(--design-unit) * 1px);
    align-items: center;
    box-sizing: border-box;
    font-family: var(--body-font);
    font-size: var(--type-ramp-base-font-size);
    line-height: var(--type-ramp-base-line-height);
    font-weight: initial;
    font-variation-settings: var(--type-ramp-base-font-variations);
    min-height: 100%;
    padding: 0 calc(var(--design-unit) * 2.25px);
    color: var(--neutral-foreground-rest);
    fill: currentcolor;
    font-family: var(--body-font);
}


.input-group {
    display: flex;
    gap: .25em;
    align-items: center;
    flex-wrap: wrap;
}

    .input-group > label {
        width: 100%; /* Abstand zwischen den Elementen */
    }

    .input-group fluent-text-field {
        flex: 1;
    }

